# signoz-mcp-server

./: .gitignore  .local.pyproject.toml  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  glama.json  mcp_server.py  pyproject.toml  requirements.txt  ruff.toml  stdio_server.py
processor/: processor.py  signoz_processor.py
src/signoz_mcp_server/: config.yaml  mcp_server.py  stdio_server.py
src/signoz_mcp_server/processor/: signoz_processor.py
tests/: conftest.py  pytest.ini  utils.py
tests/clients/: openai.py  signoz.py
tests/prompts/: conftest.py  test_prompts.py
tests/tools/: conftest.py  test_mcp_server_tools.py  test_openai_client.py  test_signoz_processor.py
